<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item android:id="@+id/dailyBibleVerse"
            android:title="@string/daily_bible_verse"
            android:icon="@drawable/ic_baseline_today_24"
            app:showAsAction="never" />
    </group>

    <group android:checkableBehavior="single">
        <item android:id="@+id/share"
            android:title="@string/share"
            android:icon="@drawable/ic_baseline_share_24"
            app:showAsAction="never" />

        <item android:id="@+id/settings"
            android:title="@string/settings"
            android:icon="@drawable/ic_baseline_settings_24"
            app:showAsAction="never" />
    </group>
</menu>