<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_scrollFlags="enterAlways|scroll"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:title="@string/app_name" />
        </com.google.android.material.appbar.AppBarLayout >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/favoriteBibleVerseRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layoutAnimation="@anim/layout_animation_slide_down"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <TextView
            android:id="@+id/emptyMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:layout_marginTop="@dimen/spacing_very_large"
            android:gravity="center"
            android:drawablePadding="@dimen/spacing_medium"
            android:paddingBottom="@dimen/spacing_medium"
            android:paddingEnd="@dimen/spacing_large"
            android:paddingStart="@dimen/spacing_large"
            android:paddingTop="@dimen/spacing_medium"
            android:text="@string/favorite_bible_verses_empty_message"
            android:textColor="@color/text_disabled"
            android:textSize="16sp"
            android:fontFamily="@font/font_family_nanum_myeongjo"
            android:visibility="gone"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:drawableTopCompat="@drawable/ic_empty_box_96px"
            app:drawableTint="@color/icon_disabled"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>